[tool.poetry]
name = "anekrin"
version = "0.1.0"
description = ""
authors = ["Michael"]

[tool.poetry.dependencies]
python = "^3.11"
asyncpg = "^0.27.0"
tortoise-orm = "^0.19.1"
matplotlib = "^3.5.1"
aerich = "^0.7.1"
aio-pika = "^9.0.5"
aiogram = "^2.19"
emoji = "^2.1.0"
sentry-sdk = "^1.5.6"
numpy = "^1.22.3"
pandas = "^1.4.1"
calmap = "^0.0.9"
mplcyberpunk = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-asyncio = "^0.20.3"

[tool.aerich]
tortoise_orm = "app.config.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
