[tool.poetry]
name = "anekrin"
version = "0.1.0"
description = ""
authors = ["Michael"]

[tool.poetry.dependencies]
python = "^3.12"
asyncpg = "^0.30.0"
tortoise-orm = "^0.22.1"
matplotlib = "^3.5.1"
aerich = "^0.8.0"
aio-pika = "^9.4.3"
aiogram = "^3.12.0"
emoji = "^2.12.1"
sentry-sdk = "^2.13.0"
numpy = "^2.1.0"
pandas = "^2.0.0"
mplcyberpunk = "^0.7.1"
calmap = {git = "https://github.com/expert-m/calmap.git"}
setuptools = "^75.6.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"

[tool.aerich]
tortoise_orm = "app.config.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
